--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.0.0",
     "express-handlebars": "^6.0.2",
+    "gh-pages": "^3.2.3",
     "hardhat": "^2.8.3",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
