--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "postinstall": "npm run typings",
-    "typings": "typings install"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,8 @@
   "bugs": {
     "url": "https://github.com/jared-v-samonte/ERC721-with-Hardhat/issues"
   },
-  "homepage": ".",
+  "homepage": "https://gitname.github.io/react-gh-pages",
+  "private": true,
   "devDependencies": {
     "@babel/cli": "^7.17.0",
     "@babel/core": "^7.17.0",
