--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "chai": "^4.3.0",
+    "console": "^0.7.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.6.0",
@@ -77,11 +78,14 @@
     "react-navigation-stack": "^2.10.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "repl": "^0.1.3",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.2",
     "style-loader": "0.23.1",
+    "ts-node": "^10.5.0",
     "ts-pnp": "1.1.6",
-    "webpack-manifest-plugin": "^4.1.1"
+    "webpack-manifest-plugin": "^4.1.1",
+    "xmlhttprequest": "^1.8.0"
   },
   "browserslist": [
     ">0.2%",
