--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/jared-v-samonte/ERC721-with-Hardhat/issues"
   },
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://jared-v-samonte.github.io/",
   "private": true,
   "devDependencies": {
     "@babel/core": "^7.17.0",
