--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "short_name": "Jared's Project",
+    "short_name": "Hexagon Pic",
     "name": "Jared's IPFS NFT Project",
     "icons": [
       {
